fix: font-size growth aligns with design

--- a/styles/base.css
+++ b/styles/base.css
@@ -459,35 +459,40 @@
   --spectrum-heading-size-xxl: var(--spectrum-font-size-1200);
   --spectrum-heading-weight-xxl: var(--spectrum-black-font-weight);
 
-  --spectrum-heading-size-xl: var(--spectrum-font-size-1000);
+  --spectrum-heading-size-xl: var(--spectrum-font-size-1100);
   --spectrum-heading-weight-xl: var(--spectrum-black-font-weight);
 
-  --spectrum-heading-size-l: var(--spectrum-font-size-800);
+  --spectrum-heading-size-l: var(--spectrum-font-size-900);
   --spectrum-heading-weight-l: var(--spectrum-black-font-weight);
 
-  --spectrum-heading-size-m: var(--spectrum-font-size-750);
+  --spectrum-heading-size-m: var(--spectrum-font-size-800);
   --spectrum-heading-weight-m: var(--spectrum-extra-bold-font-weight);
 
   --spectrum-heading-size-s: var(--spectrum-font-size-700);
   --spectrum-heading-weight-s: var(--spectrum-extra-bold-font-weight);
 
-  @media (min-width: 48rem) {
-    --spectrum-heading-size-l: var(--spectrum-font-size-1300);
+  @media (min-width: 22.5rem) {
+    --spectrum-heading-size-xxl: var(--spectrum-font-size-1300);
+    --spectrum-heading-size-xl: var(--spectrum-font-size-1200);
+    --spectrum-heading-size-l: var(--spectrum-font-size-1000);
     --spectrum-heading-size-m: var(--spectrum-font-size-900);
     --spectrum-heading-size-s: var(--spectrum-font-size-800);
   }
 
-  @media (min-width: 80rem) {
-    --spectrum-heading-size-xl: var(--spectrum-font-size-1200);
+  @media (min-width: 48rem) {
+    --spectrum-heading-size-xxl: var(--spectrum-font-size-1400);
+    --spectrum-heading-size-xl: var(--spectrum-font-size-1300);
     --spectrum-heading-size-l: var(--spectrum-font-size-1100);
     --spectrum-heading-size-m: var(--spectrum-font-size-1000);
+    --spectrum-heading-size-s: var(--spectrum-font-size-900);
   }
 
-  @media (min-width: 105rem) {
+  @media (min-width: 80rem) {
     --spectrum-heading-size-xxl: var(--spectrum-font-size-1500);
     --spectrum-heading-size-xl: var(--spectrum-font-size-1400);
     --spectrum-heading-size-l: var(--spectrum-font-size-1200);
     --spectrum-heading-size-m: var(--spectrum-font-size-1100);
+    --spectrum-heading-size-s: var(--spectrum-font-size-1000);
   }
 
   /* title */
@@ -515,7 +520,7 @@
   --spectrum-title-size-xs: var(--spectrum-font-size-100);
   --spectrum-title-weight-xs: var(--spectrum-bold-font-weight);
 
-  @media (min-width: 80rem) {
+  @media (min-width: 48rem) {
     --spectrum-title-size-xxxl: var(--spectrum-font-size-800);
     --spectrum-title-size-xxl: var(--spectrum-font-size-700);
     --spectrum-title-size-xl: var(--spectrum-font-size-600);
@@ -534,14 +539,13 @@
   --spectrum-detail-size-m: var(--spectrum-font-size-200);
   --spectrum-detail-size-s: var(--spectrum-font-size-100);
 
-  @media (min-width: 48rem) {
+  @media (min-width: 22.5rem) {
     --spectrum-detail-size-l: var(--spectrum-font-size-400);
   }
 
-  @media (min-width: 80rem) {
+  @media (min-width: 48rem) {
     --spectrum-detail-size-l: var(--spectrum-font-size-500);
     --spectrum-detail-size-m: var(--spectrum-font-size-300);
-    --spectrum-detail-size-s: var(--spectrum-font-size-100);
   }
 
   /* body */
@@ -555,16 +559,12 @@
   --spectrum-body-size-s: var(--spectrum-font-size-200);
   --spectrum-body-size-xs: var(--spectrum-font-size-100);
 
-  @media (min-width: 80rem) {
+  @media (min-width: 48rem) {
     --spectrum-body-size-xl: var(--spectrum-font-size-600);
     --spectrum-body-size-l: var(--spectrum-font-size-500);
     --spectrum-body-size-m: var(--spectrum-font-size-400);
     --spectrum-body-size-s: var(--spectrum-font-size-300);
     --spectrum-body-size-xs: var(--spectrum-font-size-200);
-  }
-
-  @media (min-width: 105rem) {
-    --spectrum-body-size-xl: var(--spectrum-font-size-600);
   }
 
   /* functional */
